[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmu"
version = "0.2b1"
dependencies = [
  "joblib",
  "lxml",
  "pyyaml",
  "requests",
]
requires-python = ">= 3.11"
authors = [
  {name = "Adam Mansur", email = "mansura@si.edu"}
]
maintainers  = [
  {name = "Adam Mansur", email = "mansura@si.edu"}
]
description = "Python library for Axiell EMu used to read/write XML and access the EMu REST API"
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/NMNH-IDSC/xmu"
Documentation = "https://xmu.readthedocs.io"
Changelog = "https://github.com/NMNH-IDSC/xmu/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
